force-app/main/default/objects/Service_Request__c/fields/SR_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>SR_Closed_Date__c</fullName>
    <label>SR Closed Date</label>
    <type>Date</type>
</CustomField>