force-app/main/default/objects/Service_Request__c/fields/SR_Status__c.field-meta.xml
<CustomField>
    <fullName>SR_Status__c</fullName>
    <label>SR Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>