force-app/main/default/objects/Service_Request__c/fields/SR_Type_History__c.field-meta.xml
<CustomField>
    <fullName>SR_Type_History__c</fullName>
    <label>Type History</label>
    <length>100</length>
    <type>Text</type>
</CustomField>