force-app/main/default/objects/Service_Request__c/validationRules/ClosedDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedDate</fullName>
    <active>true</active>
    <errorConditionFormula>((SR_Closed_Date__c) &gt;  ( TODAY()))</errorConditionFormula>
    <errorDisplayField>SR_Closed_Date__c</errorDisplayField>
    <errorMessage>Closes Date is  In Correct , Please Change the Value</errorMessage>
</ValidationRule>