force-app/main/default/objects/Service_Request__c/validationRules/NoFieldValueChange.validationRule-meta.xml
<ValidationRule>
    <fullName>NoFieldValueChange</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(  SR_Status__c ),&quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Once SR Is Closed, You Wont Able to Change the Value . Please Cancel the Action !!!</errorMessage>
</ValidationRule>