force-app/main/default/objects/Service_Request__c/validationRules/SR_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>SR_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SR_Type__c, &quot;Complaint&quot;),( AND(ISPICKVAL( Sub_Type__c , &quot;Replacement&quot;), ISPICKVAL( SR_Status__c ,&quot;Working&quot; ) ) ) )</errorConditionFormula>
    <errorMessage>SR Type is Mandatory</errorMessage>
</ValidationRule>