force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SR_Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>